// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCategories: Component should render correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Tag Categories"
  />
  <ProjectBreadcrumbs
    items={
      Array [
        Object {
          "h3": "project title",
          "path": "/project/1/",
          "span": Object {
            "defaultMessage": "Project",
            "id": "shared.components.projectBreadcrumbs.project",
          },
        },
        Object {
          "h3": Object {
            "defaultMessage": "Templates",
            "id": "shared.components.projectBreadcrumbs.templates",
          },
          "path": "/project/1/templates",
          "span": Object {
            "defaultMessage": "Tab",
            "id": "shared.components.projectBreadcrumbs.tab",
          },
        },
        Object {
          "active": true,
          "h3": Object {
            "defaultMessage": "TagTemplates Template",
            "id": "shared.components.projectBreadcrumbs.tagsTemplate",
          },
          "path": "/project/1/tags-templates",
          "span": Object {
            "defaultMessage": "Library",
            "id": "shared.components.projectBreadcrumbs.libraryMessage",
          },
        },
      ]
    }
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      id="addTagCategoryBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# TagTemplates}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="0"
      >
        <Styled(H1)
          id="tag-category-colors"
          onClick={[Function]}
        >
          Colors
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# TagTemplates}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="1"
      >
        <Styled(H1)
          id="tag-category-countries"
          onClick={[Function]}
        >
          Countries
        </Styled(H1)>
      </Styled(Component)>
    </styled.section>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackArrowButton
        hideOnDesktop={true}
        id="backBtn"
        onClick={[Function]}
      />
      <PlusButton
        customStyles={Object {}}
        hideOnDesktop={true}
        onClick={[Function]}
      />
    </NavigationContainer>
  </LoadingWrapper>
</Fragment>
`;

exports[`TagCategories: Component should render correctly when no categories 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Tag Categories"
  />
  <ProjectBreadcrumbs
    items={
      Array [
        Object {
          "h3": "project title",
          "path": "/project/1/",
          "span": Object {
            "defaultMessage": "Project",
            "id": "shared.components.projectBreadcrumbs.project",
          },
        },
        Object {
          "h3": Object {
            "defaultMessage": "Templates",
            "id": "shared.components.projectBreadcrumbs.templates",
          },
          "path": "/project/1/templates",
          "span": Object {
            "defaultMessage": "Tab",
            "id": "shared.components.projectBreadcrumbs.tab",
          },
        },
        Object {
          "active": true,
          "h3": Object {
            "defaultMessage": "TagTemplates Template",
            "id": "shared.components.projectBreadcrumbs.tagsTemplate",
          },
          "path": "/project/1/tags-templates",
          "span": Object {
            "defaultMessage": "Library",
            "id": "shared.components.projectBreadcrumbs.libraryMessage",
          },
        },
      ]
    }
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      id="addTagCategoryBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# TagTemplates}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="0"
      >
        <Styled(H1)
          id="tag-category-colors"
          onClick={[Function]}
        >
          Colors
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# TagTemplates}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="1"
      >
        <Styled(H1)
          id="tag-category-countries"
          onClick={[Function]}
        >
          Countries
        </Styled(H1)>
      </Styled(Component)>
    </styled.section>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackArrowButton
        hideOnDesktop={true}
        id="backBtn"
        onClick={[Function]}
      />
      <PlusButton
        customStyles={Object {}}
        hideOnDesktop={true}
        onClick={[Function]}
      />
    </NavigationContainer>
  </LoadingWrapper>
</Fragment>
`;

exports[`TagCategories: Component should render correctly with loader 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Tag Categories"
  />
  <ProjectBreadcrumbs
    items={
      Array [
        Object {
          "h3": "project title",
          "path": "/project/1/",
          "span": Object {
            "defaultMessage": "Project",
            "id": "shared.components.projectBreadcrumbs.project",
          },
        },
        Object {
          "h3": Object {
            "defaultMessage": "Templates",
            "id": "shared.components.projectBreadcrumbs.templates",
          },
          "path": "/project/1/templates",
          "span": Object {
            "defaultMessage": "Tab",
            "id": "shared.components.projectBreadcrumbs.tab",
          },
        },
        Object {
          "active": true,
          "h3": Object {
            "defaultMessage": "TagTemplates Template",
            "id": "shared.components.projectBreadcrumbs.tagsTemplate",
          },
          "path": "/project/1/tags-templates",
          "span": Object {
            "defaultMessage": "Library",
            "id": "shared.components.projectBreadcrumbs.libraryMessage",
          },
        },
      ]
    }
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Tag"
        id="project.tagCategories.title"
      />
    }
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      id="addTagCategoryBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# TagTemplates}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="0"
      >
        <Styled(H1)
          id="tag-category-colors"
          onClick={[Function]}
        >
          Colors
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# TagTemplates}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        id="tagContainer"
        key="1"
      >
        <Styled(H1)
          id="tag-category-countries"
          onClick={[Function]}
        >
          Countries
        </Styled(H1)>
      </Styled(Component)>
    </styled.section>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackArrowButton
        hideOnDesktop={true}
        id="backBtn"
        onClick={[Function]}
      />
      <PlusButton
        customStyles={Object {}}
        hideOnDesktop={true}
        onClick={[Function]}
      />
    </NavigationContainer>
  </LoadingWrapper>
</Fragment>
`;
